After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695093 - compositor: Fix ClutterTimeline usage
compositor: Fix ClutterTimeline usage
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-03 23:22 UTC by Rui Matos
Modified: 2013-03-03 23:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
compositor: Fix ClutterTimeline usage (1.29 KB, patch)
2013-03-03 23:22 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-03-03 23:22:21 UTC
See patch
Comment 1 Rui Matos 2013-03-03 23:22:22 UTC
Created attachment 237917 [details] [review]
compositor: Fix ClutterTimeline usage

Use the correct 'stopped' signal name and callback signature.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-03-03 23:24:25 UTC
Review of attachment 237917 [details] [review]:

OK.
Comment 3 Rui Matos 2013-03-03 23:25:52 UTC
Attachment 237917 [details] pushed as 660eceb - compositor: Fix ClutterTimeline usage